--- a/app/src/main/res/layout/fragment_fin_jeu.xml
+++ b/app/src/main/res/layout/fragment_fin_jeu.xml
@@ -14,11 +14,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView7" tools:text="nom de la carte"
                 android:textAlignment="center" android:textColor="@color/colorBlanc" android:textSize="46sp"
-                app:layout_constraintStart_toStartOf="@+id/Cards"
-                app:layout_constraintEnd_toEndOf="@+id/Cards"
+                app:layout_constraintStart_toStartOf="@+id/victoryCard"
+                app:layout_constraintEnd_toEndOf="@+id/victoryCard"
                 app:layout_constraintHorizontal_bias="0.475"
                 android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
-                app:layout_constraintTop_toBottomOf="@+id/Cards" android:text="nom de la carte"/>
+                app:layout_constraintTop_toBottomOf="@+id/victoryCard" android:text="nom de la carte"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         <ImageView
                 android:layout_width="209dp"
                 android:layout_height="216dp" app:srcCompat="@drawable/loup_garou"
-                android:id="@+id/Cards"
+                android:id="@+id/victoryCard"
                 app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
                 android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
     </android.support.constraint.ConstraintLayout>
