--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LobbyActivity"
-        android:background="#581305">
+        android:background="@drawable/background3">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
@@ -15,11 +15,22 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/playerView"/>
     <Button
+            android:text="@string/commencer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/startGame" android:text="@string/commencer"
-            app:layout_constraintTop_toBottomOf="@+id/playerView"
+            android:id="@+id/startGame"
+
+            android:bottomRightRadius="15dp"
+            android:bottomLeftRadius="15dp"
+            android:topLeftRadius="15dp"
+            android:topRightRadius="15dp"
+
+            android:background="@drawable/buttonshape" android:textSize="18sp" android:textColor="@color/blanc_casse"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="24dp" app:layout_constraintHorizontal_bias="0.497"
+            android:layout_marginTop="26dp" app:layout_constraintTop_toBottomOf="@+id/playerView"/>
+
 </android.support.constraint.ConstraintLayout>
