--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -13,62 +13,76 @@
             android:layout_height="59dp"
             android:id="@+id/textView3" android:textStyle="bold"
             android:textAlignment="center" android:textColor="@color/blanc_casse"
-            android:textSize="36sp" android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="36sp"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
             android:shadowDy="2"
-            android:shadowRadius="5"/>
+            android:shadowRadius="5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="76dp" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="@string/nombre_de_joueurs"
-            android:layout_width="279dp"
-            android:layout_height="63dp"
-            android:id="@+id/textView4" android:textStyle="bold"
-            android:textAlignment="center" android:textColor="@color/cardview_light_background"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:textStyle="bold"
+            android:textAlignment="viewStart" android:textColor="@color/blanc_casse"
             android:textSize="24sp"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"
+            app:layout_constraintEnd_toEndOf="@+id/partyNameView"
             app:layout_constraintStart_toStartOf="@+id/partyNameView" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/partyNameView"/>
+            app:layout_constraintTop_toBottomOf="@+id/partyNameView" app:layout_constraintHorizontal_bias="0.505"/>
     <EditText
-            android:layout_width="313dp"
-            android:layout_height="64dp"
+            android:layout_height="wrap_content"
             android:inputType="textLongMessage|textPersonName"
             android:ems="10"
             android:id="@+id/partyNameView"
             android:textColor="@color/cardview_light_background"
             android:hint="@string/nom_de_la_partie"
-            android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            android:textColorLink="@color/colorBlanc" android:textColorHint="@color/colorBlanc"
+            android:textColorHighlight="@color/colorBlanc"
+            android:background="@drawable/edittextshape"
+            android:layout_width="wrap_content" android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintHorizontal_bias="0.51"/>
-    <ImageButton
-            android:layout_width="47dp"
-            android:layout_height="48dp" app:srcCompat="@android:drawable/button_onoff_indicator_on"
-            android:id="@+id/removeButton"
-            app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginStart="56dp"
-            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
-    <ImageButton
-            android:layout_width="53dp"
-            android:layout_height="51dp" app:srcCompat="@android:drawable/ic_input_add"
-            android:id="@+id/addButton"
-            app:layout_constraintStart_toEndOf="@+id/nbPlayerView" android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
-            app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView"/>
+            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
+    />
     <TextView
-            android:layout_width="47dp"
-            android:layout_height="47dp"
+            android:layout_width="49dp"
+            android:layout_height="48dp"
             android:id="@+id/nbPlayerView" android:textSize="36sp"
-            android:textAlignment="center" android:textStyle="bold"
-            android:textColor="@color/cardview_light_background" app:layout_constraintStart_toEndOf="@+id/removeButton"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/removeButton"
-            app:layout_constraintBottom_toBottomOf="@+id/removeButton" app:layout_constraintVertical_bias="1.0"/>
+            android:textColor="@color/blanc_casse"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:textStyle="bold"/>
     <Button
             android:text="Créer"
+            android:layout_width="244dp"
+            android:layout_height="64dp"
+            android:id="@+id/createButton"
+            android:background="@drawable/buttonshape" android:textColor="@color/blanc_casse"
+            android:textStyle="bold" android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
+            android:layout_marginTop="84dp" app:layout_constraintTop_toBottomOf="@+id/nbPlayerView"
+            app:layout_constraintHorizontal_bias="0.358"/>
+    <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/createButton" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/nbPlayerView" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/buttonshape" android:textColor="@color/blanc_casse"/>
+            android:layout_height="wrap_content" app:srcCompat="@drawable/add_icon"
+            android:id="@+id/addButton"
+            android:background="@color/transparentBackground"
+            app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
+            app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView"
+            app:layout_constraintStart_toEndOf="@+id/nbPlayerView" app:layout_constraintVertical_bias="0.0"
+    />
+    <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/minus_icon"
+            android:id="@+id/removeButton"
+            android:background="@color/transparentBackground"
+            app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
+            app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView" app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/nbPlayerView"/>
 </android.support.constraint.ConstraintLayout>
