--- a/app/src/main/res/layout/fragment_fin_jeu.xml
+++ b/app/src/main/res/layout/fragment_fin_jeu.xml
@@ -31,7 +31,7 @@
                 android:text="Le gagnant \n est ..."/>
         <ImageView
                 android:layout_width="209dp"
-                android:layout_height="216dp" app:srcCompat="@drawable/loup_garou"
+                android:layout_height="216dp" app:srcCompat="@drawable/loup_garou_launcher"
                 android:id="@+id/victoryCard"
                 app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
                 android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
