--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -5,12 +5,21 @@
             android:color="@color/colorPrimaryDark"/>
 
     <padding
-        android:left="10dp"
-        android:right="10dp"/>
+            android:left="10dp"
+            android:right="10dp"/>
     <size android:width="240dp"
           android:height="50dp"/>
     <stroke
             android:width="1dp"
             android:color="@color/blanc_casse"></stroke>
-
+    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+            android:color="@color/colorPrimaryDark">
+        <item>
+            <shape>
+                <padding android:padding="1dp" />
+                <corners android:radius="5dp" />
+                <solid android:color="@color/colorPrimary" />
+            </shape>
+        </item>
+    </ripple>
 </shape>
