--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -10,10 +10,12 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="532dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="533dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/playerView"/>
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/playerView"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"
+    />
     <Button
             android:text="@string/commencer"
             android:layout_width="wrap_content"
@@ -30,7 +32,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="24dp" app:layout_constraintHorizontal_bias="0.497"
-            android:layout_marginTop="26dp" app:layout_constraintTop_toBottomOf="@+id/playerView"/>
+            android:layout_marginBottom="28dp" app:layout_constraintHorizontal_bias="0.497"
+    />
 
 </android.support.constraint.ConstraintLayout>
