--- a/app/src/main/res/layout/fragment_player_view_row.xml
+++ b/app/src/main/res/layout/fragment_player_view_row.xml
@@ -11,7 +11,7 @@
                                              android:layout_marginTop="2dp">
     <TextView
             android:layout_width="228dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:text="coucou" android:id="@+id/lobbyPseudoText"
             android:textSize="24sp"
             android:textColor="@android:color/white"
