--- a/app/src/main/res/layout/fragment_loup.xml
+++ b/app/src/main/res/layout/fragment_loup.xml
@@ -5,10 +5,10 @@
                                              android:layout_height="match_parent"
                                              tools:context=".LoupFragment">
     <android.support.v7.widget.RecyclerView
-            android:layout_width="395dp"
-            android:layout_height="715dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:id="@+id/loupRecyclerView"/>
+            android:id="@+id/loupRecyclerView" android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
