--- a/app/src/main/res/layout/loup_vote_view_row.xml
+++ b/app/src/main/res/layout/loup_vote_view_row.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="wrap_content"
+                                             android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.CardView
@@ -10,11 +12,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:cardElevation="3dp"
-            android:layout_margin="4dp"
+            android:layout_margin="20dp"
             app:cardUseCompatPadding="true" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
+    >
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -23,8 +25,8 @@
 
             <ImageView
                     android:id="@+id/avatarPlayerLoup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     app:srcCompat="@drawable/icon_avatar"/>
 
             <TextView
