--- a/app/src/main/res/layout/chasseur_vote_view_row.xml
+++ b/app/src/main/res/layout/chasseur_vote_view_row.xml
@@ -7,7 +7,7 @@
 
 
     <android.support.v7.widget.CardView
-            android:id="@+id/cardview"
+            android:id="@+id/chasseurCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
