--- a/app/src/main/res/layout/fragment_chasseur.xml
+++ b/app/src/main/res/layout/fragment_chasseur.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".ChasseurFragment">
+                                             tools:context=".ChasseurFragment"
+                                             android:background="@drawable/background3">
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:id="@+id/chasseurRecyclerView" android:layout_marginTop="8dp"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/chasseurRecyclerView"
+            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/killButton"/>
+    <Button
+            android:text="@string/tirer"
+            android:layout_width="185dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/killButton" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/chasseurRecyclerView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/chasseurRecyclerView"
+            app:layout_constraintEnd_toEndOf="@+id/chasseurRecyclerView"
+            android:background="@drawable/buttonshape" android:textSize="24sp" android:textColor="@color/blanc_casse"
+            app:layout_constraintVertical_bias="0.694" app:layout_constraintHorizontal_bias="0.5"/>
 </android.support.constraint.ConstraintLayout>
