voyante chasseur Fragment finished

--- a/app/src/main/res/layout/fragment_loup.xml
+++ b/app/src/main/res/layout/fragment_loup.xml
@@ -3,7 +3,8 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".LoupFragment">
+                                             tools:context=".LoupFragment"
+                                             android:background="@drawable/background3">
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
