--- a/app/src/main/res/layout/fragment_vision.xml
+++ b/app/src/main/res/layout/fragment_vision.xml
@@ -15,17 +15,16 @@
             app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textSize="36sp"
             android:textColor="@color/blanc_casse"
             android:textAlignment="center"
-            android:layout_marginTop="72dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
             android:shadowDy="2"
             android:shadowRadius="5"
-    />
+            app:layout_constraintHorizontal_bias="0.501"/>
     <TextView
-            android:text="@string/est"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView6" android:textSize="36sp"
+            android:id="@+id/messageText" android:textSize="36sp"
             android:textColor="@color/blanc_casse" android:textStyle="bold" android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="@+id/selectedPlayerPseudo"
             app:layout_constraintStart_toStartOf="@+id/selectedPlayerPseudo"
@@ -38,9 +37,9 @@
             android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/selectedPlayerRole" app:layout_constraintEnd_toEndOf="@+id/textView6"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" android:textStyle="bold"
+            android:id="@+id/selectedPlayerRole" app:layout_constraintEnd_toEndOf="@+id/messageText"
+            app:layout_constraintStart_toStartOf="@+id/messageText"
+            app:layout_constraintTop_toBottomOf="@+id/messageText" android:textStyle="bold"
             android:textAlignment="center" android:textSize="36sp" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
@@ -53,4 +52,17 @@
             app:layout_constraintTop_toBottomOf="@+id/selectedPlayerRole"
             app:layout_constraintStart_toStartOf="@+id/selectedPlayerRole"
             app:layout_constraintEnd_toEndOf="@+id/selectedPlayerRole"/>
+    <TextView
+            android:text="5"
+            android:layout_width="53dp"
+            android:layout_height="53dp"
+            android:id="@+id/visionTimer" android:textSize="36sp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse" android:textStyle="bold"
+            android:background="@drawable/pseudoshape"
+            android:textAlignment="center"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5" android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
