--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -60,7 +60,7 @@
     <ImageButton
             android:layout_width="49dp"
             android:layout_height="48dp" app:srcCompat="@drawable/tuto_icon"
-            android:id="@+id/imageButton"
+            android:id="@+id/rulesButton"
             android:background="@color/transparentBackground"
             app:layout_constraintTop_toBottomOf="@+id/settingButton"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
