--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -59,7 +59,7 @@
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
             android:textStyle="bold"/>
     <Button
-            android:text="Créer"
+            android:text="@string/cr_er"
             android:layout_width="244dp"
             android:layout_height="64dp"
             android:id="@+id/createButton"
