--- a/app/src/main/res/layout/fragment_fin_jeu.xml
+++ b/app/src/main/res/layout/fragment_fin_jeu.xml
@@ -18,7 +18,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/victoryCard"
                 app:layout_constraintHorizontal_bias="0.475"
                 android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
-                app:layout_constraintTop_toBottomOf="@+id/victoryCard" android:text="nom de la carte"/>
+                app:layout_constraintTop_toBottomOf="@+id/victoryCard" android:text="@string/nom_de_la_carte"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="44dp" app:layout_constraintHorizontal_bias="0.5"
-                android:text="Le gagnant \n est ..."/>
+                android:text="@string/le_gagnant_n_est"/>
         <ImageView
                 android:layout_width="209dp"
                 android:layout_height="216dp" app:srcCompat="@drawable/loup_garou_launcher"
