--- a/app/src/main/res/layout/fragment_loup.xml
+++ b/app/src/main/res/layout/fragment_loup.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"/>
     <TextView
-            android:text="1"
+            android:text="@string/_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/wolfieTiming" android:textSize="80sp"
