--- a/app/src/main/res/layout/fragment_player_view_row.xml
+++ b/app/src/main/res/layout/fragment_player_view_row.xml
@@ -12,7 +12,7 @@
     <TextView
             android:layout_width="228dp"
             android:layout_height="wrap_content"
-            android:text="coucou" android:id="@+id/lobbyPseudoText"
+            android:text="@string/coucou" android:id="@+id/lobbyPseudoText"
             android:textSize="24sp"
             android:textColor="@android:color/white"
             android:textAlignment="textStart" android:layout_marginBottom="8dp"
