--- a/app/src/main/res/layout/fragment_vote_jour.xml
+++ b/app/src/main/res/layout/fragment_vote_jour.xml
@@ -16,14 +16,14 @@
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"/>
     <TextView
-            android:text="1"
+            android:text="@string/_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/jourTiming" android:textSize="80sp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/loupRecyclerView"
+            app:layout_constraintBottom_toTopOf="@+id/voteRecyclerView"
             android:textColor="@color/blanc_casse" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
