--- a/app/src/main/res/layout/loup_horizontal_row.xml
+++ b/app/src/main/res/layout/loup_horizontal_row.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView"
+                    android:text="@string/textview"
                     android:textSize="12sp"
                     android:textStyle="italic|bold"
                     android:layout_marginTop="8dp"
