--- a/app/src/main/res/layout/pseudo_edit_layout.xml
+++ b/app/src/main/res/layout/pseudo_edit_layout.xml
@@ -15,5 +15,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.15"
-            android:layout_marginTop="8dp" android:hint="Pseudo"/>
+            android:layout_marginTop="8dp" android:hint="@string/pseudo"/>
 </android.support.constraint.ConstraintLayout>
