Bud affichage des regles fixed

--- a/app/src/main/res/layout/activity_tuto.xml
+++ b/app/src/main/res/layout/activity_tuto.xml
@@ -11,21 +11,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
             tools:layout_editor_absoluteX="0dp">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                 <TextView
-                        android:layout_width="424dp"
-                        android:layout_height="66dp" android:id="@+id/rules_title" android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/rules_title" android:textStyle="bold"
                         android:text="@string/r_gles" android:textSize="36sp" android:textColor="@color/blanc_casse"
                         android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
                         app:layout_constraintBottom_toTopOf="@+id/rules_title_resume"/>
                 <TextView
-                        android:layout_width="421dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/rules_title_resume"
                         android:textColor="@color/blanc_casse"
                         android:text="@string/Resume_debut" android:textAlignment="center"
